# src/verifyJWT.ts
@@ -2,12 +2,25 @@ const jwt = require('jsonwebtoken');
 const SECRET = process.env.SECRET
 
 const verifyJWT = (req, res, next) => {
+    // console.log("REQUEST Headers", req.headers)
+
+
+    console.log("REQUEST", Object.keys(req))
+    console.log()
+    if(!req.headers) {
+        
+        return res.status(200).json({ message: 'Test Authorization - No Headers' })
+    }
     const authHeader = req.headers.authorization || req.headers.Authorization
+    console.log("AUTH HEADER: ", authHeader)
+    console.log("req.headers.authorization: ",req.headers.authorization)
+    console.log("req.headers.Authorization: ", req.headers.Authorization)
+
 
     if (!authHeader?.startsWith('Token ')) {
-        return res.status(401).json({ message: 'Unauthorized' })
+        return res.status(401).json({ message: 'OOP GIRL NOT AUTHORIZED' }) //'Unauthorized'
     }
-
+    //Perry said Query Couchbase for the user object that is associated with that token
     const token = authHeader.split(' ')[1];
 
     jwt.verify(
@@ -18,11 +31,15 @@ const verifyJWT = (req, res, next) => {
                 return res.status(403).json({ message: 'Forbidden' });
             }
             req.userId = decoded.user.id;
+            console.log("REQUEST USERID", req.userId)//undefined
             req.userEmail = decoded.user.email;
+            console.log(req.userEmail)
             req.userHashedPwd = decoded.user.password;
+            console.log(req.userHashedPwd)
             next();
         }
     )
+    
 };
 
 export default verifyJWT;
